# run-on-business-day

./: .gitignore  Justfile  README.md  go.mod  main.go  main_test.go  package.json  syukujitsu.csv  syukujitsu_data.go  update.go  upgrade.go
.claude/: settings.json
.github/workflows/: annual-release.yml  release.yml
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/run-on-business-day/: package.json
npm/win32-x64/: package.json
python/: build_wheel.py  pyproject.toml
python/run_on_business_day/: _runner.py
scripts/: install.js
tools/csv2go/: main.go
