[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-on-business-day"
version = "0.0.0"
description = "Run commands only on Japanese business days"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "usaagi" }
]
repository = "https://github.com/usaagi/run-on-business-day"

# Binaries are deployed directly from wheel's bin/ directory
# No entry_points needed - native executables are installed to ~/.local/bin/

[tool.hatch.build.targets.wheel]
packages = ["run_on_business_day"]
